feat: add snowstorm support

--- a/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.html
+++ b/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.html
@@ -30,15 +30,16 @@
     <ng-container *ngIf="(results$ | async) as results">
         <ul class="list-group m-1" *ngIf="results.length > 0">
             <li class="list-group-item d-flex justify-content-between align-items-center"
-                *ngFor="let concept of results" (click)="onClick(concept)">
+                *ngFor="let searchItem of results" (click)="onClick(searchItem.concept)">
                 <div class="font-sm">
                     <div>
-                        <concept-definition-status-icon [concept]="concept"></concept-definition-status-icon>
-                        <b> {{ concept | term }} </b>
+                        <concept-definition-status-icon [concept]="searchItem.concept">
+                        </concept-definition-status-icon>
+                        <b> {{ searchItem.term }} </b>
                     </div>
-                    <small> {{ concept.conceptId }} | <i> {{ concept | semtag }} </i> </small>
+                    <small> {{ searchItem.concept.conceptId }} | <i> {{ searchItem.concept | semtag }} </i> </small>
                 </div>
-                <concept-count-pill [concept]="concept"></concept-count-pill>
+                <concept-count-pill [concept]="searchItem.concept"></concept-count-pill>
             </li>
         </ul>
         <div *ngIf="results.length === 0">
