--- a/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
+++ b/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
@@ -2,7 +2,7 @@
     <div>
         <div>
             <concept-definition-status-icon [concept]="concept"></concept-definition-status-icon>
-            <strong> {{ concept.fsn }} </strong>
+            <strong> {{ concept.fsn.term }} </strong>
         </div>
         <div>
             <small>
