refactor edad y precalculados

--- a/apps/analytics/src/app/views/pacientes-stats/demografia-table/demografia-table.component.html
+++ b/apps/analytics/src/app/views/pacientes-stats/demografia-table/demografia-table.component.html
@@ -4,7 +4,7 @@
             <thead>
                 <tr>
                     <th scope="col">Sexo</th>
-                    <th scope="col" *ngFor="let i of rangoEtario"> {{ i }} </th>
+                    <th scope="col" *ngFor="let i of escalas[rangoEtario]"> {{ i }} </th>
                     <th scope="col">Total</th>
                 </tr>
             </thead>
