feat(browser): ajustes cromaticos

--- a/apps/analytics/src/app/views/concept-detail/concept-stats/concept-stats.component.html
+++ b/apps/analytics/src/app/views/concept-detail/concept-stats/concept-stats.component.html
@@ -4,6 +4,7 @@
             <h1>{{ stats.total }}</h1>
             <h3>Registros</h3>
         </div>
+        <hr class="divisor-vertical">
         <div class="bloque-numerico-secundario">
             <article>
                 <h2>{{ stats.exact }}</h2>
