--- a/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.html
+++ b/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.html
@@ -31,15 +31,16 @@
         <ul class="list-group m-1" *ngIf="results.length > 0">
             <li class="list-group-item d-flex justify-content-between align-items-center"
                 *ngFor="let searchItem of results" (click)="onClick(searchItem.concept)">
-                <div class="font-sm">
-                    <div>
-                        <concept-definition-status-icon [concept]="searchItem.concept">
-                        </concept-definition-status-icon>
+                <div class="d-flex flex-row align-items-center">
+                    <i class="adi adi-{{ searchItem.concept | semtag }} mr-2"></i>
+                    <concept-definition-status-icon [concept]="searchItem.concept">
+                    </concept-definition-status-icon>
+                    <div class="titulo-item">
                         <b> {{ searchItem.term }} </b>
+                        <small> {{ searchItem.concept.conceptId }} | <i> {{ searchItem.concept | semtag }} </i> </small>
                     </div>
-                    <small> {{ searchItem.concept.conceptId }} | <i> {{ searchItem.concept | semtag }} </i> </small>
                 </div>
-                <concept-count-pill [concept]="searchItem.concept"></concept-count-pill>
+                <concept-count-pill class="d-flex align-center" [concept]="searchItem.concept"></concept-count-pill>
             </li>
         </ul>
         <div *ngIf="results.length === 0">
