--- a/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
+++ b/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
@@ -1,10 +1,9 @@
-<div class="bar d-flex justify-content-between">
-    <div>
-        <div>
-            <concept-definition-status-icon [concept]="concept"></concept-definition-status-icon>
+<div class="bar d-flex flex-row justify-content-between align-items-center">
+    <div class="d-flex flex-row align-items-center">
+        <i class="adi adi-{{ concept | semtag  }}  mr-2"></i>
+        <concept-definition-status-icon [concept]="concept"></concept-definition-status-icon>
+        <div class="titulo-item">
             <strong> {{ concept.fsn.term }} </strong>
-        </div>
-        <div>
             <small>
                 <strong>SCTID:</strong> {{ concept.conceptId }}
             </small>
