--- a/libs/snomed/src/lib/components/concept-desc-table/concept-desc-table.component.html
+++ b/libs/snomed/src/lib/components/concept-desc-table/concept-desc-table.component.html
@@ -1,8 +1,7 @@
-<div class="row m-2 mt-3 text-center">
+<div class="row">
+    <hr class="divider">
     <div class="col-12">
-        <h6>
-            <strong> {{ refSetLanguage.term }} </strong>
-        </h6>
+        <h6 class="text-muted text-center">{{ refSetLanguage.term }}</h6>
     </div>
 </div>
 <table class="table table-bordered">
