--- a/libs/snomed/src/lib/components/concept-childrens/concept-childrens.component.scss
+++ b/libs/snomed/src/lib/components/concept-childrens/concept-childrens.component.scss
@@ -1,13 +1,9 @@
 .parent-card {
-    max-height: 300px;
-    overflow: auto;
+    height: fit-content;
+    overflow-x: hidden;
     margin-left: 0%;
     margin-bottom: 10px;
     margin-top: 10px;
-    // width: 80%;
-    border: 2px solid #357ebd;
-    border-radius: 4px;
-    padding: 5px;
 
     ul {
         list-style-type: none;
